--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -92,7 +92,10 @@ Other API changes
 
 Deprecations
 ~~~~~~~~~~~~
--
+- Deprecated strings ``T``, ``S``, ``L``, ``U``, and ``N`` denoting frequencies in :class:`Minute`, :class:`Second`, :class:`Milli`, :class:`Micro`, :class:`Nano` (:issue:`52536`)
+- Deprecated strings ``T``, ``S``, ``L``, ``U``, and ``N`` denoting resolutions in :meth:`Timedelta.resolution_string` (:issue:`52536`)
+- Deprecated strings ``T``, ``S``, ``L``, ``U``, and ``N`` denoting units in :class:`Timedelta` (:issue:`52536`)
+- Deprecated strings ``S``, ``U``,and ``N`` denoting units in :func:`to_timedelta` (:issue:`52536`)
 -
 
 .. ---------------------------------------------------------------------------
