--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -113,7 +113,7 @@ Performance improvements
 
 Bug fixes
 ~~~~~~~~~
-
+-- Bug in :class:`AbstractHolidayCalendar` where timezone data was not propagated when computing holiday observances (:issue:`54580`)
 Categorical
 ^^^^^^^^^^^
 -
