Add "error" value

--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -16,17 +16,17 @@ Enhancements
 
 .. _whatsnew_220.enhancements.pyarrow_on_bad_lines:
 
-PyArrow engine support for handling malformed lines in CSV
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+PyArrow engine support for handling malformed lines in CSV files
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Prior to this release, the ability to handle malformed lines in CSV files was
 limited to the ``python`` engine with the use of the ``on_bad_lines`` parameter.
 This release brings that capability to the `PyArrow <https://arrow.apache
 .org/docs/python/index.html>`_ engine as well.
 
-The implementation supports both specifying ``skip`` and ``warn`` values as
-well as passing down a callable as defined in the `PyArrow documentation
-<https://arrow.apache.org/docs/python/generated/pyarrow.csv.ParseOptions.html
-#pyarrow.csv.ParseOptions.invalid_row_handler>`_
+The implementation supports both specifying ``skip``, ``error`` and ``warn``
+values as well as passing down a callable as defined in the `PyArrow
+documentation <https://arrow.apache.org/docs/python/generated/pyarrow.csv.
+ParseOptions.html#pyarrow.csv.ParseOptions.invalid_row_handler>`_
 
 *Example Usage*
 
