--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -16,15 +16,6 @@ Enhancements
 
 .. _whatsnew_220.enhancements.pyarrow_on_bad_lines:
 
-PyArrow engine support for handling malformed lines in CSV files
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-This release brings the capability to handle malformed lines in CSV files to
-the the `PyArrow <https://arrow.apache.org/docs/python/index.html>`_ engine
-using the ``on_bad_lines`` parameter.The implementation supports both specifying
-``skip``, ``error`` and ``warn`` values as well as passing down a callable as
-defined in the `PyArrow documentation <https://arrow.apache
-.org/docs/python/generated/pyarrow.csv.
-ParseOptions.html#pyarrow.csv.ParseOptions.invalid_row_handler>`_.
 
 .. _whatsnew_220.enhancements.enhancement2:
 
@@ -35,8 +26,8 @@ enhancement2
 
 Other enhancements
 ^^^^^^^^^^^^^^^^^^
--
--
+- Addition of the capability to handle malformed lines in CSV files to the the `PyArrow <https://arrow.apache.org/docs/python/index.html>`_ engine using the ``on_bad_lines`` parameter. (:issue:`54480`)
+
 
 .. ---------------------------------------------------------------------------
 .. _whatsnew_220.notable_bug_fixes:
