--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -139,7 +139,7 @@ Timezones
 
 Numeric
 ^^^^^^^
-- Bug in :func:`_read`, pyarrow engine not defaulting to float64 causing precision errors when specifying a dtype; fixed by explicitly setting dtype if dtype not none and isinstance of dict (:issue:`52505`)
+- Bug in :func:`_read`, pyarrow engine defaulting to float64 causing rounding errors for large integers; now processes input appropriately (:issue:`52505`)
 -
 
 Conversion
