Revert changes in v2.2.0.rst > enhancements

--- a/doc/source/whatsnew/v2.2.0.rst
+++ b/doc/source/whatsnew/v2.2.0.rst
@@ -14,8 +14,10 @@ including other versions of pandas.
 Enhancements
 ~~~~~~~~~~~~
 
-.. _whatsnew_220.enhancements.pyarrow_on_bad_lines:
+.. _whatsnew_220.enhancements.enhancement1:
 
+enhancement1
+^^^^^^^^^^^^
 
 .. _whatsnew_220.enhancements.enhancement2:
 
