--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -39,11 +39,15 @@ We are collecting feedback on this decision `here <https://github.com/pandas-dev
 Avoid NumPy object dtype for strings by default
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-Previously, all strings were stored in columns with NumPy object dtype.
+Previously, all strings were stored in columns with NumPy object dtype by default.
 This release introduces an option ``future.infer_string`` that infers all
 strings as PyArrow backed strings with dtype ``"string[pyarrow_numpy]"`` instead.
 This is a new string dtype implementation that follows NumPy semantics in comparison
 operations and will return ``np.nan`` as the missing value indicator.
+Setting the option will also infer the dtype ``"string"`` as a :class:`StringDtype` with
+storage set to ``"pyarrow_numpy"``, ignoring the value behind the option
+``mode.string_storage``.
+
 This option only works if PyArrow is installed. PyArrow backed strings have a
 significantly reduced memory footprint and provide a big performance improvement
 compared to NumPy object (:issue:`54430`).
