DOC: Add date for v2.1.0 (#54850)

--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -1,6 +1,6 @@
 .. _whatsnew_210:
 
-What's new in 2.1.0 (Aug 11, 2023)
+What's new in 2.1.0 (Aug 30, 2023)
 --------------------------------------
 
 These are the changes in pandas 2.1.0. See :ref:`release` for a full changelog
@@ -891,3 +891,5 @@ Other
 
 Contributors
 ~~~~~~~~~~~~
+
+.. contributors:: v2.0.3..v2.1.0|HEAD
