REGR: Merge raising when left merging on arrow string index

--- a/doc/source/whatsnew/v2.1.1.rst
+++ b/doc/source/whatsnew/v2.1.1.rst
@@ -13,7 +13,7 @@ including other versions of pandas.
 
 Fixed regressions
 ~~~~~~~~~~~~~~~~~
--
+- Fixed regression in :func:`merge` when merging over a PyArrow string index (:issue:`54894`)
 
 .. ---------------------------------------------------------------------------
 .. _whatsnew_211.bug_fixes:
