updated latest rst doc with enhancement note

--- a/doc/source/whatsnew/v2.1.1.rst
+++ b/doc/source/whatsnew/v2.1.1.rst
@@ -42,7 +42,7 @@ Bug fixes
 
 Other
 ~~~~~
--
+- Enhancement in :meth:`_libs.tslibs.parsing.guess_datetime_format` to make public (:issue:`54727`)
 
 .. ---------------------------------------------------------------------------
 .. _whatsnew_211.contributors:
